--- a/force-app/main/default/classes/nksGetStoUtilityController.cls
+++ b/force-app/main/default/classes/nksGetStoUtilityController.cls
@@ -6,6 +6,7 @@
  * @last modified by  : mamikals
  **/
 public without sharing class nksGetStoUtilityController {
+    private LoggerUtility logger = new LoggerUtility('GET_STO');
     private final static Integer MAX_ATTEMPTS = 5;
     public class TooManyAttemptsException extends Exception {
     }
@@ -227,6 +228,14 @@ public without sharing class nksGetStoUtilityController {
                 return [SELECT Id FROM Case LIMIT 1]?.Id;
             } else if (psr.size() == 0)
                 throw new NoCasesFoundException('NotFound');
+            if (psr[0].workItem.Status = 'Closed') {
+                logger.error(
+                'STO Case already closed: ' + psr[0].WorkItemId + ' - ' + psr[0].WorkItem.Status,
+                psr[0],
+                CRM_ApplicationDomain.Domain.NKS
+                );
+                logger.publish();
+            }
             return psr[0].WorkItemId;
         } catch (QueryException queryEx) {
             throw new AuraHandledException('En feil oppsto ved henting av ny STO, prøv igjen.');
